correct z-index of auth modal

--- a/src/scss/layouts/_modal-auth.scss
+++ b/src/scss/layouts/_modal-auth.scss
@@ -5,7 +5,7 @@
 
 .modal-auth {
     position: absolute;
-    z-index: 9999;
+    z-index: 3999;
     top: 0;
     left: 0;
     width: 100%;
